@@ -10,6 +10,7 @@ FEATURES:
 BUG FIXES:
 	- Fix #551: Change Regent to Copyright holder in the LICENSE,
 	  to match the definition on opensource.org for the BSD License.
+	- Fix #553: Improve TXT parsing.
 	- Fix #587: Default value for statistics is 0.
 
 
