@@ -1,5 +1,6 @@
 16 June 2014: Matthijs
 	- Fix #587: Default statistics period is 0, fix doc.
+	- Fix #553: Fix the shift/reduce conflicts.
 
 10 June 2014: Matthijs
 	- Fix #587: Default statistics period should be 3600.
